[package]
name = "youtube-first-comment"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
google-youtube3 = "5.0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
