[package]
name = "youtube-first-comment"
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
google-youtube3 = "5.0.5"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
